Fixed nav - Now collapses and correctly formated

--- a/static/css/content.css
+++ b/static/css/content.css
@@ -227,4 +227,40 @@ body {
     }
 }
 
+/* Media Queries */
+
+@media (min-width: 768px) {
+    .txt-holder {
+        margin-top: 1.5rem;
+        padding: 0rem 0rem 0rem 1rem;
+    }
+
+    .suns .txt-holder {
+        padding: 0rem 1rem 0rem 0rem;
+    }
+
+    .copy-holder .col-md-5 {
+        margin-top: 1rem;
+    }
+
+    .gorillas {
+        margin-top: 2rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .txt-holder {
+        margin-top: 2rem;
+        padding: 0rem 0rem 0rem 2rem;
+    }
+
+    .suns .txt-holder {
+        padding: 0rem 2rem 0rem 0rem;
+    }
+
+    .copy-holder .col-md-5 {
+        margin-top: 2rem;
+    }
+}
+
 
