--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,21 +99,68 @@ h5 { font-size: 1em; }
   padding: 1rem 1rem 1rem 1rem;
 }
 
+.navbar {
+  position: relative;
+  display: block;
+  align-items: center;
+  padding-bottom: .5rem;
+}
+
+.navbar-light .navbar-nav .nav-link.active {
+  color: #00f78a;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: white;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+  color: white;
+}
+
+.navbar-light .navbar-toggler {
+  color: rgb(255 255 255);
+  border-color: rgb(255 255 255);
+}
+
+.navbar-toggler {
+  padding: 0.25rem 0.75rem;
+  margin: 2rem 2rem 2.5rem 2rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: .25rem;
+  transition: box-shadow .15s ease-in-out;
+}
+
 .nav li a {
   font-size: 1.5vw;
   padding-bottom: 0px;
 }
 
-.nav-box {
+.navbar>.nav-box {
+  display: flex;
+  flex-wrap: inherit;
+  align-items: flex-end;
   z-index: 100;
   position: fixed;
   background-color: #000000;
   max-width: 100vw;
 }
 
+.navbar-brand {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  text-decoration: none;
+  white-space: nowrap;
+}
+
 #imgHolder {
   margin-left: 0;
-  margin: 0px;
+  margin: 6px;
   margin-right: auto;
   display: flex;
   width: fit-content;
@@ -125,6 +172,14 @@ h5 { font-size: 1em; }
 
 .nav-link:active {
   color: #00f78a;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+  font-size: 1.5rem;
+}
+
+.navbar-nav {
+  align-items: flex-end;
 }
 
 .landing {
@@ -173,6 +228,39 @@ h5 { font-size: 1em; }
 }
 
 /* media queries */
+@media (max-width: 992px) {
+  .navbar-nav {
+    padding-right: 2rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .container, .container-md, .container-sm {
+    max-width: 1020px;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-collapse {
+      display: flex!important;
+      flex-basis: auto;
+      margin-bottom: 0.5rem;
+      justify-content: flex-end;
+      align-items: flex-end;
+  }
+
+  .navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: .5rem;
+    padding-left: .5rem;
+    display: flex;
+    align-items: flex-end;
+  }
+
+  .navbar-expand-lg .navbar-nav {
+    margin-right: 1rem;
+  }
+}
+
 @media (min-width: 1200px) {
   .container, .container-lg, .container-md, .container-sm, .container-xl {
       max-width: 1200px;
